cmake_minimum_required(VERSION 3.10)
project(sim)

set(CMAKE_CXX_STANDARD 11)

include_directories(misc)
include_directories(pipe)
include_directories(seq)

add_executable(sim
        misc/examples.c
        misc/hcl.lex
        misc/hcl.y
        misc/isa.c
        misc/isa.h
        misc/Makefile
        misc/mux4.hcl
        misc/node.c
        misc/node.h
        misc/outgen.c
        misc/outgen.h
        misc/README
        misc/yas-grammar.lex
        misc/yas.c
        misc/yas.h
        misc/yis.c
        pipe/benchmark.pl
        pipe/check-len.pl
        pipe/correctness.pl
        pipe/gen-driver.pl
        pipe/Makefile
        pipe/ncopy.c
        pipe/ncopy.ys
        pipe/pipe-1w.hcl
        pipe/pipe-broken.hcl
        pipe/pipe-btfnt.hcl
        pipe/pipe-full.hcl
        pipe/pipe-lf.hcl
        pipe/pipe-nobypass.hcl
        pipe/pipe-nt.hcl
        pipe/pipe-std.hcl
        pipe/pipe.tcl
        pipe/pipeline.h
        pipe/psim.c
        pipe/README
        pipe/sim.h
        pipe/stages.h
        ptest/ctest.pl
        ptest/etest.pl
        ptest/htest.pl
        ptest/jtest.pl
        ptest/Makefile
        ptest/optest.pl
        ptest/README
        ptest/tester.pm
        seq/Makefile
        seq/README
        seq/seq+-std.hcl
        seq/seq+.tcl
        seq/seq-full.hcl
        seq/seq-std.hcl
        seq/seq.tcl
        seq/sim.h
        seq/ssim.c
        y86-code/abs-asum-cmov.ys
        y86-code/abs-asum-jmp.ys
        y86-code/asum.ys
        y86-code/asumi.ys
        y86-code/asumr.ys
        y86-code/cjr.ys
        y86-code/j-cc.ys
        y86-code/Makefile
        y86-code/poptest.ys
        y86-code/prog1.ys
        y86-code/prog10.ys
        y86-code/prog2.ys
        y86-code/prog3.ys
        y86-code/prog4.ys
        y86-code/prog5.ys
        y86-code/prog6.ys
        y86-code/prog7.ys
        y86-code/prog8.ys
        y86-code/prog9.ys
        y86-code/pushquestion.ys
        y86-code/pushtest.ys
        y86-code/README
        y86-code/ret-hazard.ys
        Makefile
        README)
